# Chat_app

Server/: CMakeLists.txt  device.cpp  device.h  main.cpp  server.cpp  server.h  session.cpp  session.h
network_chat/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
